--- a/indesx.css
+++ b/indesx.css
@@ -278,7 +278,6 @@ section{
     display: flex;
     color:#CC5;
     border: #CCc solid 2px;
-    margin-left: 17rem;
     font-size: 63px;
     font-family: roboto;
 
@@ -311,7 +310,7 @@ section{
 }
 html ::-webkit-scrollbar {
     width: 1px;
-    height: 3px; /* A altura só é vista quando a rolagem é horizontal */
+    height: 3px; 
   }
   html ::-webkit-scrollbar-track {
     background: transparent;
@@ -328,22 +327,66 @@ html ::-webkit-scrollbar {
     scrollbar-color: black transparent;
   }
 
+@media (min-width: 316px){
+    .navbar {
+        display: none;
+    }
+    .apresent h2 {
+        padding-top: -28px;
+        padding-bottom: 2px;
+        line-height: -12px;
+        color: #fff;
+        font-size: 62px;
+    }
+    .apresent p {
+        line-height: 34px;
+        width: 316px;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 2rem;
+    }
+    #serviços{
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+        gap: 0.5rem;
+        max-width: 316px;
+    
+        max-width: 316px;  
+        overflow-x: auto;
+    }
+    .logos{
+     max-width: 316px; 
+     display: contents;
+    }
+    .map iframe{
+        width:200px;
+        height:250px;
+        border-radius:10px;
+        padding-bottom:50px;
+        }
+        .divbaixo p{
+        font-size: 27px;
+        margin-bottom: 35rem;
+    }
+}
+
+
+
 @media (min-width: 413px){ 
     .navbar{
         display:none;
     }
-    .apresent h2 {
-        padding-top: -25px;
-        padding-bottom: 15px;
-        line-height: 31px;
-        color: #fff;
-        /* text-align: center; */
-        align-items: center;
-        display: flex;
-        justify-content: center;
-        font-size: 60px;
-        max-width: 413px;
     
+    .apresent h2 {
+        padding-top: 28px;
+        padding-bottom: 12px;
+        line-height: 23px;
+        color: #fff;
+        font-size: 61px;
+        margin-left: auto;
+        margin-right: auto;
     }
     .apre{
         max-width: 413px;  
@@ -363,16 +406,33 @@ html ::-webkit-scrollbar {
      display: contents;
     }
     .unidade{
-        max-width: 413px; 
         margin-left: auto;
         margin-right: auto;
     }
     .map iframe{
-        max-width: 400px; 
-        height:350px;
+        max-width: 413px; 
+        height:413px;
         border-radius:10px;
         padding-bottom:50px;
     
+    }
+    .map iframe {
+        width: 413px;
+      
+    }
+    .logos{
+        display: block;
+    }
+    .map iframe{
+        width:413px;
+        height:400px;
+        border-radius:10px;
+        padding-bottom:50px;
+        }
+
+    .unidade {
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
@@ -516,5 +576,60 @@ html ::-webkit-scrollbar {
         align-items: center;
         gap: 8rem;
    }
+   
+.apresent h2{
+    padding-top:50px;
+    padding-bottom:30px;
+    line-height: 50px; 
+    color:#fff;
+    font-size: 147px;
+ }
+ .apresent p{
+    line-height: 34px;
+    width: 518px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
+ }
+ .apre{
+    font-size:30px;
+     font-weight: bold;
+     font-family: roboto;
+     line-height: 66px;
+ 
+     color:#fff;
+     display: flex;
+     justify-content: center;
+     
+     font-weight: bold;
+     text-shadow: #000 3px 3px 3px;
+ 
+ }
+.apresent{
+    display: flex;
+    flex-direction: column;
+     background-image: url(./img/santana.jpg);
+     padding:20rem 1rem;
+     background-size: cover;
+
+ } 
+
+.apresent h2{
+    padding-top:50px;
+    padding-bottom:30px;
+    line-height: 50px; 
+    color:#fff;
+    font-size: 147px;
+ }
+ .apresent p{
+    line-height: 25px; 
+    width: 1000px; 
+    text-align:center;
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom: 2rem;
+ }
 
 }
+   
