--- a/indesx.css
+++ b/indesx.css
@@ -265,6 +265,7 @@ section{
     margin-left: auto;
     margin-right: auto;
     gap: 0.1rem;
+    margin-bottom: 2rem;
 }
 .agendamento input, label, select{
     border-radius: 4px;
@@ -273,6 +274,7 @@ section{
     width: 12rem;
     background-color: #ccc;
     color:#000;
+    outline: none;
 }
 
 
